# CoppeliaSim-CMake

./: CMakeLists.txt
include/coppeliasim/: coppeliasim.h  coppeliasim_joint.h  coppeliasim_joint_manager.h  coppeliasim_link.h  coppeliasim_link_manager.h
src/: main.cpp
src/coppeliasim/: coppeliasim_joint.cpp
